# mech3msg

./: .gitignore  Cargo.toml  README.md  build.rs  compare.py  rust-toolchain.toml  shared.py  tests.py
.cargo/: config  config.toml
.github/: Mech3Msg.json
.github/workflows/: check.yaml
src/: lib.rs
src/hook/: dll_main.rs  mod.rs  patch.rs
