cargo-features = ["strip"]

[package]
name = "mech3msg"
version = "0.1.0"
authors = ["Toby Fleming <tobywf@users.noreply.github.com>"]
edition = "2018"
description = "mech3msg is a replacement for the default localization DLL"
readme = "README.md"
license-file = "LICENSE.txt"
repository = "https://github.com/tobywf/mech3msg"
keywords = ["cli", "MechWarrior", "reverse engineering"]
publish = false

autoexamples = false
autobenches = false
build = "build.rs"

[dependencies]

[dependencies.winapi]
version = "0.3"
features = ["winuser", "libloaderapi", "processthreadsapi", "memoryapi", "profileapi", "debugapi"]
optional = true

[dependencies.cstr_core]
version = "0.2.2"
default-features = false
optional = true

[features]
default = ["hook"]
hook = ["winapi", "cstr_core"]

[lib]
crate-type = ["cdylib"]
test = false
doctest = false
bench = false
doc = false

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
encoding = "0.2.33"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
strip = "symbols"
debug = false
