# strip is a nightly feature: https://github.com/rust-lang/rust/issues/72110
cargo-features = ["strip"]

[package]
name = "mech3msg"
version = "0.1.0"
authors = ["Toby Fleming <tobywf@users.noreply.github.com>"]
edition = "2018"
description = "mech3msg is a replacement for the default localization DLL"
readme = "README.md"
license-file = "LICENSE.txt"
repository = "https://github.com/TerranMechworks/mech3msg"
keywords = ["cli", "MechWarrior", "reverse engineering"]
publish = false

autoexamples = false
autobenches = false
build = "build.rs"

[dependencies]

[lib]
crate-type = ["cdylib"]
test = false
doctest = false
bench = false
doc = false

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
encoding = "0.2"
embed-resource = "1.6"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
strip = "symbols"
debug = false
